--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -50,8 +50,8 @@
     }
   },
   "header": {
-    "phone": "📞 514-555-0123",
-    "email": "✉️ info@boomsold.ca",
+    "phone": "514-555-0123",
+    "email": "info@boomsold.ca",
     "nav": {
       "buy": "Buy",
       "sell": "Sell",
